Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37901

Wrong result with Loose Scan on QUICK_GROUP_MIN_MAX_SELECT WITH TIES

    XMLWordPrintable

Details

    • Unexpected results
    • Q4/2025 Server Maintenance, Q4/2025 Server Development

    Description

      Query with QUICK_GROUP_MIN_MAX + ORDER BY WITH TIES
      produced wrong result, as QUICK_GROUP_MIN_MAX doesn't support
      ORDERING operation with it. However, ORDERING was done as part of
      GROUP BY operation.

      Thank you psergei for the test case. It is below in the comment.

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              bsrikanth Srikanth Bondalapati
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 4.5h
                  2d 4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.